VP8 temporal scalability not working in 75/76
Categories
(Core :: WebRTC: Audio/Video, defect, P1)
Tracking
()
| Tracking | Status | |
|---|---|---|
| firefox-esr68 | --- | unaffected |
| firefox75 | --- | wontfix |
| firefox76 | --- | fixed |
| firefox77 | --- | fixed |
People
(Reporter: lennox, Assigned: dminor)
References
(Depends on 1 open bug, Blocks 1 open bug, Regression)
Details
(Keywords: regression, Whiteboard: [jitsi-meet])
Attachments
(1 file)
|
47 bytes,
text/x-phabricator-request
|
RyanVM
:
approval-mozilla-beta+
|
Details | Review |
When I turn on simulcast in WebRTC I see VP8 streams being sent with temporal scalability (TID and TL0PICIDX fields in the payload header) with Firefox 73 and 74, but not with Firefox 75 or 76.
This is with an experimental branch of Jitsi-meet which is getting close to having full Firefox support. (We can give you access if that'd be helpful.)
This regression makes it harder to get to full Firefox support for Jitsi, unfortunately...
Comment 1•6 years ago
|
||
Any chance you can narrow this down with mozregression?
| Reporter | ||
Comment 2•6 years ago
|
||
mozregression returned:
And it looks like the problem is actually somewhat more complicated than I thought - it looks like one of the simulcast layers is lacking simulcast support, while the other two have it.
Comment 3•6 years ago
|
||
Yeah we switched over to using |streamCount| here:
But we decremented |streamCount| to 0 here:
Updated•6 years ago
|
| Assignee | ||
Comment 4•6 years ago
|
||
Updated•6 years ago
|
| Assignee | ||
Updated•6 years ago
|
Comment 6•6 years ago
|
||
| bugherder | ||
| Assignee | ||
Comment 7•6 years ago
|
||
Hi Jonathan, this should now be fixed in Nightly. I was wondering if you could please verify that this is the case? Thank you!
| Reporter | ||
Comment 8•6 years ago
|
||
Yes, I can confirm the problem is fixed in Nightly.
Updated•6 years ago
|
| Assignee | ||
Comment 9•6 years ago
|
||
Comment on attachment 9140105 [details]
Bug 1628851 - Fix VP8 temporal scalability; r=bwc!
Beta/Release Uplift Approval Request
- User impact if declined: Broken simulcast leading to higher bandwidth consumption and poor performance when making webrtc calls.
- Is this code covered by automated tests?: No
- Has the fix been verified in Nightly?: Yes
- Needs manual test from QE?: No
- If yes, steps to reproduce:
- List of other uplifts needed: None
- Risk to taking this patch: Low
- Why is the change risky/not risky? (and alternatives if risky): This is a small change that reverts to previous behaviour.
- String changes made/needed: None
Comment 10•6 years ago
|
||
Comment on attachment 9140105 [details]
Bug 1628851 - Fix VP8 temporal scalability; r=bwc!
Fixes a regression by reverting back to previous known-good behavior. Approved for 76.0b6.
Comment 11•6 years ago
|
||
| bugherder uplift | ||
Updated•6 years ago
|
Description
•