Bug 1628851 - Fix VP8 temporal scalability; r=bwc

Differential Revision: https://phabricator.services.mozilla.com/D70673

--HG--
extra : moz-landing-system : lando